--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bibliotech - Funcionários</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="login.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bibliotech - Sistema</title>
+
+  <!-- Importando os estilos -->
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="login.css" />
+
+  <!-- Importando o JavaScript -->
+  <script src="index.js" defer></script>
 </head>
 
 <body>
@@ -16,41 +21,49 @@
       <button class="active" onclick="openTab(event, 'login')">Login</button>
       <button onclick="openTab(event, 'cadastro')">Cadastro</button>
       <button onclick="openTab(event, 'listagem')">Listagem</button>
+      <button onclick="openTab(event, 'livros')">Livros</button>
     </div>
 
     <!-- Aba Login -->
     <div id="login" class="tab-content active">
       <div class="container">
-        <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo">
+        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Login</h2>
         <form>
-          <input type="text" placeholder="Usuário" required>
-          <input type="password" placeholder="Senha" required>
+          <input type="text" placeholder="Usuário" required />
+          <input type="password" placeholder="Senha" required />
           <button type="submit">Entrar</button>
         </form>
-        <p>Não possui cadastro? <a href="#" onclick="openTab(event, 'cadastro')">Crie sua conta</a></p>
+        <p>
+          Não possui cadastro?
+          <a href="#" onclick="openTab(event, 'cadastro')">Crie sua conta</a>
+        </p>
       </div>
     </div>
 
     <!-- Aba Cadastro -->
     <div id="cadastro" class="tab-content">
       <div class="form-box">
-        <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo">
+        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Cadastro de Funcionário</h2>
         <form id="formFuncionario">
-          <input type="text" id="nome" placeholder="Nome Completo" required>
-          <input type="text" id="cpf" placeholder="CPF" required>
-          <input type="email" id="email" placeholder="E-mail" required>
-          <input type="text" id="endereco" placeholder="Endereço" required>
-          <input type="tel" id="telefone" placeholder="Telefone" required>
+          <input type="text" id="nome" placeholder="Nome Completo" required />
+          <input type="text" id="cpf" placeholder="CPF" required />
+          <input type="email" id="email" placeholder="E-mail" required />
+          <input type="text" id="endereco" placeholder="Endereço" required />
+          <input type="tel" id="telefone" placeholder="Telefone" required />
           <button type="submit">Criar Conta</button>
         </form>
-        <p>Já possui uma conta? <a href="#" onclick="openTab(event, 'login')">Faça login</a></p>
+        <p>
+          Já possui uma conta?
+          <a href="#" onclick="openTab(event, 'login')">Faça login</a>
+        </p>
       </div>
     </div>
 
     <!-- Aba Listagem -->
     <div id="listagem" class="tab-content">
+      <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
       <h2>Listagem de Funcionários</h2>
       <table>
         <thead>
@@ -67,10 +80,22 @@
         </tbody>
       </table>
     </div>
-  </div>
 
-  <!-- Importando o script externo -->
-  <script src="index.js"></script>
+    <!-- Aba Livros -->
+    <div id="livros" class="tab-content">
+      <div class="form-box">
+        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
+        <h2>Cadastro de Livros</h2>
+        <form id="formLivro">
+          <input type="text" id="titulo" placeholder="Título do Livro" required />
+          <input type="text" id="autor" placeholder="Autor" required />
+          <input type="text" id="editora" placeholder="Editora" required />
+          <input type="number" id="ano" placeholder="Ano de Publicação" required />
+          <button type="submit">Cadastrar Livro</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
