--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Bibliotech - Sistema</title>
 
   <!-- Importando os estilos -->
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="style.css" />
+
 
   <!-- Importando o JavaScript -->
   <script src="index.js" defer></script>
