--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bibliotech - Sistema</title>
 
-  <!-- Importando os estilos -->
+  <!-- Estilo unificado -->
   <link rel="stylesheet" href="style.css" />
 
-
-  <!-- Importando o JavaScript -->
+  <!-- Script -->
   <script src="index.js" defer></script>
 </head>
 
 <body>
   <div class="tabs">
-    <!-- Botões das abas -->
+    <!-- 🔘 Navegação entre abas -->
     <div class="tab-buttons">
       <button class="active" onclick="openTab(event, 'login')">Login</button>
       <button onclick="openTab(event, 'cadastro')">Cadastro</button>
@@ -24,16 +23,20 @@
       <button onclick="openTab(event, 'livros')">Livros</button>
     </div>
 
-    <!-- Aba Login -->
+    <!-- ===============================
+         🟦 Aba Login
+    =============================== -->
     <div id="login" class="tab-content active">
       <div class="container">
-        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Login</h2>
-        <form>
-          <input type="text" placeholder="Usuário" required />
-          <input type="password" placeholder="Senha" required />
+
+        <form id="formLogin">
+          <input type="text" id="usuario" placeholder="Usuário" required />
+          <input type="password" id="senha" placeholder="Senha" required />
           <button type="submit">Entrar</button>
         </form>
+
         <p>
           Não possui cadastro?
           <a href="#" onclick="openTab(event, 'cadastro')">Crie sua conta</a>
@@ -41,11 +44,14 @@
       </div>
     </div>
 
-    <!-- Aba Cadastro -->
+    <!-- ===============================
+         🟩 Aba Cadastro de Funcionário
+    =============================== -->
     <div id="cadastro" class="tab-content">
       <div class="form-box">
-        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Cadastro de Funcionário</h2>
+
         <form id="formFuncionario">
           <input type="text" id="nome" placeholder="Nome Completo" required />
           <input type="text" id="cpf" placeholder="CPF" required />
@@ -54,6 +60,7 @@
           <input type="tel" id="telefone" placeholder="Telefone" required />
           <button type="submit">Criar Conta</button>
         </form>
+
         <p>
           Já possui uma conta?
           <a href="#" onclick="openTab(event, 'login')">Faça login</a>
@@ -61,31 +68,39 @@
       </div>
     </div>
 
-    <!-- Aba Listagem -->
+    <!-- ===============================
+         🟨 Aba Listagem de Funcionários
+    =============================== -->
     <div id="listagem" class="tab-content">
-      <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
-      <h2>Listagem de Funcionários</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>CPF</th>
-            <th>E-mail</th>
-            <th>Endereço</th>
-            <th>Telefone</th>
-          </tr>
-        </thead>
-        <tbody id="tabelaFuncionarios">
-          <!-- Funcionários adicionados via JS -->
-        </tbody>
-      </table>
+      <div class="container">
+        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
+        <h2>Listagem de Funcionários</h2>
+
+        <table>
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>CPF</th>
+              <th>E-mail</th>
+              <th>Endereço</th>
+              <th>Telefone</th>
+            </tr>
+          </thead>
+          <tbody id="tabelaFuncionarios">
+            <!-- Funcionários adicionados via JS -->
+          </tbody>
+        </table>
+      </div>
     </div>
 
-    <!-- Aba Livros -->
+    <!-- ===============================
+         🟥 Aba Cadastro de Livros
+    =============================== -->
     <div id="livros" class="tab-content">
       <div class="form-box">
-        <img src="logo-bibliotech.jpeg" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Cadastro de Livros</h2>
+
         <form id="formLivro">
           <input type="text" id="titulo" placeholder="Título do Livro" required />
           <input type="text" id="autor" placeholder="Autor" required />
