--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     =============================== -->
     <div id="login" class="tab-content active">
       <div class="container">
-        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech1.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Login</h2>
 
         <form id="formLogin">
@@ -49,7 +49,7 @@
     =============================== -->
     <div id="cadastro" class="tab-content">
       <div class="form-box">
-        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech1.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Cadastro de Funcionário</h2>
 
         <form id="formFuncionario">
@@ -73,7 +73,7 @@
     =============================== -->
     <div id="listagem" class="tab-content">
       <div class="container">
-        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech1.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Listagem de Funcionários</h2>
 
         <table>
@@ -98,7 +98,7 @@
     =============================== -->
     <div id="livros" class="tab-content">
       <div class="form-box">
-        <img src="logo-bibliotech.png" alt="Logo Bibliotech" class="logo-livros" />
+        <img src="logo-bibliotech1.png" alt="Logo Bibliotech" class="logo-livros" />
         <h2>Cadastro de Livros</h2>
 
         <form id="formLivro">
